tests/purs/failing/ImportHidingModule.purs
-- @shouldFailWith  ErrorParsingModule
module Main where

import B hiding (module A)
